/**
 * Supported message types
 */
enum MessageType {
  JOIN = 0;
  UPDATE_JOIN = 1;
  PING = 2;
  PING_REQ = 3;
  SYNC = 4;
  ACK = 5;
  UPDATE = 6;
}

/**
 * Node states
 */
enum NodeState {
    Alive = 0;
    Suspect = 1;
    Faulty = 2;
}

message Node {
  required string host = 1;
  optional int32 port = 2;
  optional NodeState state = 3 [default = 0];
}

message Target {
  required string host = 1;
  optional int32 port = 2;
}

message Entry {
  required string key = 1;
  required int32 value = 2;
}

/**
 * SD-SWIM message
 */
message Msg {
  optional Target target = 1;
  required MessageType type = 2;
  optional string token = 3;
  repeated Node memberList = 4;
  repeated Entry payload = 5;
}
